--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">My Portfolio</a></h1>
+					<h1 id="logo"><p>My Portfolio</p></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="#two">Portfolio</a></li>						
 							<li><a href="#three">Services</a></li>
-							<li><a href="#four">Contact</a></li>
-
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="#five">Contact</a></li>
+                         
+						<!--	<li><a href="#" class="button primary">Sign Up</a></li> -->
 						</ul>
 					</nav>
 				</header>
@@ -38,7 +38,7 @@
 							<p>Exclusively crafted with passion & am</br>
 								[Site currently under renovation]</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/pic011.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -118,25 +118,27 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
 									<h3>Customized responsive websites</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Portfolio and small business websites. Both static & dynamic </p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
 									<h3>Database tables & configuration</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>MySQL, PostGreSql, MongoDB via Node Js [MERN Stack]</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
 									<h3>Business Development & Marketing</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Digital Marketing, Sales & Business Strategies </p>
 								</section>								
 							</div>
 						</div>
+						<!--
 						<footer class="major">
 							<ul class="actions special">
 								<li><a href="#" class="button">Magna sed feugiat</a></li>
 							</ul>
-						</footer>
+						</footer> 
+					     -->
 					</div>
 				</section>
 
@@ -144,13 +146,13 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Contact</h2>
+							<p>ikzathjob@hotmail.com <br> +4915214715246 </p>
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
+								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="messaging coming soon..." /></div>
+								<div class="col-4 col-12-xsmall"><input type="submit" value="Send Message" class="fit primary" /></div>
 							</div>
 						</form>
 					</div>
@@ -159,12 +161,12 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" title="no link available" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" title="no link available" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" title="no link available" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" title="no link available" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/ikzath"   title="no link available"  class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#" title="no link available" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Ikzath Kalanthar 2020 </li>
