--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
 						</header>
 						<ul>
 						<li>React JS Todo App</li>
+						
 						<li>Code Gig App - Sequelize, PostGreSql, Handlebars & Node JS</li>
 						<li>CRUD App- MongoDB, Mongoose, EJS & Node JS</li>
 						<li>A responsive customized web app for an educational institute - jQuery</li>
-						<li>Stay tuned for more ......</li>
+						<li>Demo App- PHP, Symfony, MYSQL, Twig.</li>
 					     </ul>
 						<ul class="actions">
 							<li><a href="https://github.com/ikzath" class="button">My GitHub Repo</a></li>
