--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<div class="content">
 						<header>
 							<h2>My Passion - Software & Tech</h2>
-							<p>Exclusively crafted with passion & am</br>
+							<p>Exclusively crafted with passion</br>
 								[Site currently under renovation]</p>
 						</header>
 						<span class="image"><img src="images/pic011.jpg" alt="" /></span>
@@ -56,7 +56,7 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Focused on HTML, CSS, JavaScript, React JS and Node JS</p>
+									<p>Focused on HTML, CSS, JavaScript, React JS, PHP and Node JS</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Dream of building some new pieces of revolutionary software integrating AI concepts.</p>
@@ -81,7 +81,7 @@
 						<li>Code Gig App - Sequelize, PostGreSql, Handlebars & Node JS</li>
 						<li>CRUD App- MongoDB, Mongoose, EJS & Node JS</li>
 						<li>A responsive customized web app for an educational institute - jQuery</li>
-						<li>Demo App- PHP, Symfony, MYSQL, Twig.</li>
+						<li>Demo App- PHP, Symfony, MYSQL, Doctrine, Twig.</li>
 					     </ul>
 						<ul class="actions">
 							<li><a href="https://github.com/ikzath" class="button">My GitHub Repo</a></li>
@@ -98,8 +98,8 @@
 						 <h2>Technologies</h2>
 						</header>
 						<ul> 
-							<li>HTML, CSS, JavaScript</li>
-							<li>React Js & basic Vue Js</li>
+							<li>HTML, CSS, JavaScript, PHP</li>
+							<li>React Js & Vue Js</li>
 							<li>Node Js, Express Js, EJS, Handlebars</li>
 							<li>PostGreSql, MongoDB, Mongoose, Sequelize ORM </li>
 						</ul>						
