--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>I'm Ikzath Kalanthar from Berlin</h2>
+										<h2>I'm Ikzath Mohamed Kalanthar from Berlin</h2>
 										<p>An amateur Full-Stack developer and daydreamer!</p>
 									</header>
 								</div>
