--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 							<p>Projects worked on so far-</p>
 						</header>
 						<ul>
-						<li>React JS Todo App</li>
-						
+						<li>MERN Stack Todo App</li>
+						<li>Expense Tracker - React Context API</li>						
 						<li>Code Gig App - Sequelize, PostGreSql, Handlebars & Node JS</li>
 						<li>CRUD App- MongoDB, Mongoose, EJS & Node JS</li>
 						<li>A responsive customized web app for an educational institute - jQuery</li>
@@ -98,9 +98,10 @@
 						 <h2>Technologies</h2>
 						</header>
 						<ul> 
-							<li>HTML, CSS, JavaScript, PHP</li>
+							<li>HTML, CSS, JavaScript</li>
+							<li>PHP, Symfony, Twig, Doctrine ORM</li>
 							<li>React Js & Vue Js</li>
-							<li>Node Js, Express Js, EJS, Handlebars</li>
+							<li>Node Js, Express Js, MOngoDB, Handlebars</li>
 							<li>PostGreSql, MongoDB, Mongoose, Sequelize ORM </li>
 						</ul>						
 					</div>
