--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
 							<h2>Contact</h2>
 							<p>ikzathjob@hotmail.com <br> +4915214715246 </p>
 						</header>
-						<form method="post" action="#" class="cta">
+						<form method="post" action="" class="cta">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="messaging coming soon..." /></div>
+								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Enter your email..." /></div>
+								<div class="col-8 col-12-large"><input type="text" name="message" placeholder="Enter your message..." /></div>
 								<div class="col-4 col-12-xsmall"><input type="submit" value="Send Message" class="fit primary" /></div>
 							</div>
 						</form>
