--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 							<h2>Contact</h2>
 							<p>ikzathjob@hotmail.com <br> +4915214715246 </p>
 						</header>
-						<form method="post" action="" class="cta">
+						<form method="post" action="" class="cta" onsubmit="alert('Your message has been submitted')">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Enter your email..." /></div>
 								<div class="col-8 col-12-large"><input type="text" name="message" placeholder="Enter your message..." /></div>
