--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2>I'm Ikzath Mohamed Kalanthar from Berlin</h2>
-										<p>An amateur Full-Stack developer and daydreamer!</p>
+										<p>An Full-Stack software developer and daydreamer!</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -151,10 +151,10 @@
 							<h2>Contact</h2>
 							<p>ikzathjob@hotmail.com <br> +4915214715246 </p>
 						</header>
-						<form method="post" action="" class="cta" onsubmit="alert('Your message has been submitted')">
+						<form method="post" action="message" class="cta" onsubmit="alert('Your message has been submitted')">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Enter your email..." /></div>
-								<div class="col-8 col-12-large"><input type="text" name="message" placeholder="Enter your message..." /></div>
+								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Enter your email..." required/></div>
+								<div class="col-8 col-12-large"><input type="text" name="message" placeholder="Enter your message..." required/></div>
 								<div class="col-4 col-12-xsmall"><input type="submit" value="Send Message" class="fit primary" /></div>
 							</div>
 						</form>
