--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2>I'm Ikzath Mohamed Kalanthar from Berlin</h2>
-										<p>An Full-Stack software developer and daydreamer!</p>
+										<p>A full-stack web & software developer and daydreamer!</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
