--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>My Portfolio</title>
@@ -51,12 +47,12 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>I'm Ikzath Mohamed Kalanthar from Berlin</h2>
-										<p>An amateur Full-Stack developer and daydreamer!</p>
+										<h2>I'm Ikzath Mohamed from Berlin</h2>
+										<p>An Full-Stack developer and daydreamer!</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Focused on HTML, CSS, JavaScript, React JS, PHP and Node JS</p>
+									<p>Focused on HTMT/CSS, JavaScript, React JS, PHP, Node JS etc,.</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Dream of building some new pieces of revolutionary software integrating AI concepts.</p>
@@ -76,8 +72,8 @@
 							<p>Projects worked on so far-</p>
 						</header>
 						<ul>
-						<li>MERN Stack Todo App</li>
-						<li>Expense Tracker - React Context API</li>						
+						<li>Amazon Clone- React Context Api </li>
+						<li>Wildfire Tracker App - NASA Api</li>						
 						<li>Code Gig App - Sequelize, PostGreSql, Handlebars & Node JS</li>
 						<li>CRUD App- MongoDB, Mongoose, EJS & Node JS</li>
 						<li>A responsive customized web app for an educational institute - jQuery</li>
@@ -103,7 +99,8 @@
 							<li>React Js & Vue Js</li>
 							<li>Node Js, Express Js, MOngoDB, Handlebars</li>
 							<li>PostGreSql, MongoDB, Mongoose, Sequelize ORM </li>
-						</ul>						
+						        <li>JEST Testing, Firebase(serverless) & GraphQL</li>
+</ul>						
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
