--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>I'm Ikzath Mohamed from Berlin</h2>
+										<h2>I'm Ikzath Kalanthar from Berlin</h2>
 										<p>An Full-Stack developer and daydreamer!</p>
 									</header>
 								</div>
